...
        Button {
            model.presentWizard(.initiator)
        } label: {
            Image(systemName: "plus")
        }
        .accessibilityLabel(L10n.conversationsAddCd)
        .accessibilityIdentifier("convlist-add")
    }
}

